<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">宠爱·U</string>
    <string name="E_money">Ｅ宠币</string>
    <string name="RatingBar">评分</string>
    <string name="Receive">领取</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_manager">账户安全管理</string>
    <string name="account_pwd_login">账号密码登录</string>
    <string name="action_settings">Settings</string>
    <string name="add_buy_car">加入购物车</string>
    <string name="add_image">添加图片</string>
    <string name="add_value">充值</string>
    <string name="address_default">默认</string>
    <string name="address_name">"收  件  人"</string>
    <string name="address_on_area">所在地区</string>
    <string name="age_">年龄：</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="alipay_number_">支付宝账号</string>
    <string name="all_free_use">全部试用</string>
    <string name="all_order">全部订单</string>
    <string name="all_photo">All Photo</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="atonce_buy">立即购买</string>
    <string name="atonce_qiang_gou">立即抢购</string>
    <string name="atonce_taste">立即体验</string>
    <string name="atonce_union">立即关联</string>
    <string name="bank_code_">银行卡号　</string>
    <string name="bank_name_">账号姓名　</string>
    <string name="bank_place_">开户银行　</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="bind_friend">绑定好友</string>
    <string name="bind_phone">绑定电话</string>
    <string name="bind_phone_">绑定电话：</string>
    <string name="bind_send_check_email">绑定并发送验证邮件</string>
    <string name="birthday">生日当月有惊喜哦(^^)</string>
    <string name="birthday_">"生       日："</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brand_title">活跃品牌</string>
    <string name="btn_bind_login">绑定账号</string>
    <string name="buy_number">购买数量</string>
    <string name="buycar">购物车</string>
    <string name="buycar_clear">清 空</string>
    <string name="buycar_jicun">寄 存</string>
    <string name="buycar_take">取 出</string>
    <string name="camera">相机</string>
    <string name="can_buy">值得买</string>
    <string name="can_getvalue_balance">可提现余额</string>
    <string name="cancel">取消</string>
    <string name="cancel_">取消</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancle">取消</string>
    <string name="cart">购物车</string>
    <string name="cart_order_id_card">身份证</string>
    <string name="cb_detial">退换货详情</string>
    <string name="cb_reson">申请原因</string>
    <string name="change_gamebi_num">可兑换游戏币：</string>
    <string name="change_group">换一组</string>
    <string name="change_jingyan">兑换经验</string>
    <string name="change_or_back">退/换货</string>
    <string name="change_yipi">换一批</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="charge_money">充值金额</string>
    <string name="charge_tip">注：充值后不支持提现,海外直邮商品不支持余额支付。</string>
    <string name="check_code_">"验  证  码："</string>
    <string name="check_result_title">Check Sign Result :</string>
    <string name="check_update">查询升级</string>
    <string name="checked_all">全选</string>
    <string name="clear_condition">清空条件</string>
    <string name="clear_history">清除历史</string>
    <string name="clear_reason">选择类型：</string>
    <string name="code_">"代    码："</string>
    <string name="collect">收藏</string>
    <string name="complete">完成</string>
    <string name="confirm_title">提示</string>
    <string name="confirm_waiver_of_payment">确认放弃支付吗?</string>
    <string name="content_description_icon">icon</string>
    <string name="content_of_asks">咨询内容：</string>
    <string name="continue_to_pay">继续支付</string>
    <string name="crop_fail">Photo crop failure</string>
    <string name="crop_suc">Photo crop success</string>
    <string name="current_balance">当前余额　</string>
    <string name="current_emoney">当前E宠币：</string>
    <string name="current_score">当前积分：</string>
    <string name="custom">自定义：</string>
    <string name="daiyan_goods_pet_name">您的代言爱宠是:</string>
    <string name="default_">默认</string>
    <string name="default_carnum_0">" 0 "</string>
    <string name="default_count">1</string>
    <string name="default_count_0">0</string>
    <string name="default_goods">Ｅ宠商城商品标题</string>
    <string name="default_name">Ｅ宠商城</string>
    <string name="default_price">0.00</string>
    <string name="default_price_ico">¥</string>
    <string name="default_share_order_tip">本订单属于被拆分子订单，将统一付款，以下是关联订单信息。</string>
    <string name="default_time">正在加载</string>
    <string name="delete">删除</string>
    <string name="depart_from_the_heart">狠心离去</string>
    <string name="detial_address">详细地址</string>
    <string name="discount">折扣</string>
    <string name="distine">马上预定</string>
    <string name="distine_nomal">普通预定</string>
    <string name="distine_vip_emoney">vip预定(e宠币兑换)</string>
    <string name="distine_vip_send">vip预定(每月赠送)</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="dp_title">搭配套餐</string>
    <string name="duobao_over">宝贝已经全部被夺光了</string>
    <string name="e_price_m_">E宠币：</string>
    <string name="edit">编辑</string>
    <string name="edit_letoff_photo_format">The image format does not support this operation!</string>
    <string name="edit_order_card_id">填写身份证号</string>
    <string name="edittext_hint">请输入内容</string>
    <string name="email_address">邮箱地址：</string>
    <string name="emoney_chenge_record">E宠币变动记录</string>
    <string name="empty_sdcard">No SD card</string>
    <string name="ensure">确定</string>
    <string name="epet">E宠</string>
    <string name="epet_mall">E宠商城</string>
    <string name="epet_price">Ｅ宠价：</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="error_service">程序在后台执行, 请查看日志！</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="extern_partner">外部商户订单</string>
    <string name="external_token_title">External Token</string>
    <string name="fang_to_cart">放入购物车</string>
    <string name="fast_register">快速注册</string>
    <string name="feed_back_content">我们需要您最真诚的反馈,让我们做到最完美！</string>
    <string name="finish">完成</string>
    <string name="first_epet_">首次养宠：</string>
    <string name="folder_photo_size">%1$d Piece</string>
    <string name="follow_msg">信息跟踪</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="formats">商品规格</string>
    <string name="free_use">免费试用</string>
    <string name="gallery">Gallery</string>
    <string name="get_dtpwd">获取动态密码</string>
    <string name="get_game_money">兑换游戏币</string>
    <string name="get_game_money_everyday">您还有0次夺宝机会</string>
    <string name="get_goods_person_msg">收货人信息</string>
    <string name="get_money">提现</string>
    <string name="get_xiaoyanma">获取验证码</string>
    <string name="getgoods_address">收货地址</string>
    <string name="getvalue_value">提现金额　</string>
    <string name="getvalues_records">提现记录</string>
    <string name="give_up">放弃</string>
    <string name="global_preference">全局设置</string>
    <string name="global_preference_summary">安全支付服务和DEMO的通用设置</string>
    <string name="go_authentication">去认证</string>
    <string name="go_pay_order">去付款</string>
    <string name="go_select_goods">去挑选商品</string>
    <string name="goods_from_address">商品所在地</string>
    <string name="goods_goods_tax">海关关税</string>
    <string name="goods_image">商品图片</string>
    <string name="goods_list">商品列表</string>
    <string name="goods_nums">商品数量</string>
    <string name="goods_qingdan">商品清单</string>
    <string name="goods_send_address">发货地点</string>
    <string name="goods_zhiyou_question">直邮常见问题</string>
    <string name="goods_zhiyou_zhengce">退换货政策</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="has_do_order">全部订单</string>
    <string name="has_no_pet">您还没有添加宠物信息</string>
    <string name="has_register">已有Ｅ宠/骨头网账号</string>
    <string name="header_completed">刷新成功</string>
    <string name="header_pull">下拉刷新</string>
    <string name="header_pull_over">释放立即刷新</string>
    <string name="header_refreshing">正在刷新...</string>
    <string name="header_reset">下拉刷新</string>
    <string name="hello_any_problem_You_can_contact_E_at_any_time">您好，有问题随时可以联系小E哦~</string>
    <string name="hintBirthday">请选择出生日期</string>
    <string name="hintPetPinzhong">请选择宠物品种</string>
    <string name="hintPetSex">请选择宠物性别</string>
    <string name="hintPetState">请选择宠物状态</string>
    <string name="hintPetType">请选择宠物种类</string>
    <string name="hintSearchPetVariety">搜索宠物品种</string>
    <string name="hint_bind_registered">已有E宠/骨头网账号,直接绑定>></string>
    <string name="hint_bindnumber_head">已有E宠/骨头网账号,直接绑定</string>
    <string name="hint_daiyan_content">"配上精彩的文字呗,宝贝会更开心哦!
(广告信息将被删除)"</string>
    <string name="hint_epet_head">这就登录E宠商城~</string>
    <string name="hint_getvalue_edit">请输入提现金额</string>
    <string name="hint_libao_get_totalnum">已领走总额</string>
    <string name="hint_libao_order_getlibao">排队领礼包</string>
    <string name="hint_libao_order_need">参与排队需要：</string>
    <string name="hint_libao_order_num">排队人数</string>
    <string name="hint_login_normal_username">手机号/邮箱/用户名</string>
    <string name="hint_old_pwd">如未设置,默认为登录密码</string>
    <string name="hot_serch">热门搜索</string>
    <string name="last_serch">最近搜索</string>
    <string name="please_input_keyword">搜索品牌、类目、关键字</string>
    <string name="staion_aquarium">水族站</string>
    <string name="staion_cat">猫猫站</string>
    <string name="staion_dog">狗狗站</string>
    <string name="try_rock_phone">请试试摇晃您的手机</string>
</resources>